# agam

./: .gitignore  Cargo.toml
src/: main.rs
src/agam_engine/: mod.rs
src/agam_engine/assets/: asset_collections.rs  assets.rs  mod.rs  resources.rs
src/agam_engine/mobs/: components.rs  mod.rs
src/agam_engine/mods/: block_def.rs  events.rs  mod.rs  mods_helper.rs  resources.rs  ser_structs.rs  systems.rs
src/prelude/: consts.rs  mod.rs
